syntax = "proto3";

option go_package = ".";

package main;

service MathService{
    rpc Sum(MathRequest) returns(MathResponse){}
    rpc Multi(MathRequest) returns(MathResponse){}
}

message MathRequest{
    int64 num1 = 1;
    int64 num2 = 2;
}

message MathResponse{
    int64 reply = 1;
}